--- a/mgeni/visitor/templates/base.html
+++ b/mgeni/visitor/templates/base.html
@@ -9,14 +9,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VisitorLog</title>
     {% block styles %}
+
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css'%}">   
       {% bootstrap_css %}
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     {% endblock %}
 </head>
 <body>
-    {% include 'navbar.html'%}
+    {% include 'navbar.html' %}
     {%block content%}
         {% if messages %}
             <ul class="messages">
