--- a/mgeni/visitor/templates/navbar.html
+++ b/mgeni/visitor/templates/navbar.html
@@ -1,8 +1,125 @@
-<nav class="navbar navbar-expand-sm justify-content-between" style="background-color:#1B5E20; margin-bottom:30px;">
-        <form class="form-inline" action="" method="GET">
-                <input class="form-control mr-sm-2" type="text" name="q" placeholder="search" value="{{ request.GET.q}}"/>
-                <input class="btn btn-success" type="submit"  value="Search">
-        
-            </form>
-      </nav>
-      
+
+ <!-- <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <a class="navbar-brand" href="#">V-Log</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+               
+               <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            
+            </ul>
+            <form class="form-inline" action="" method="GET">
+                        <input class="form-control mr-sm-2" type="text" name="q" placeholder="search" value="{{ request.GET.q}}"/>
+                        <input class="btn btn-success" type="submit"  value="Search">
+                
+                    </form>
+          </div>
+        </nav>
+         -->
+         <style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
+</head>
+<body>
+<div class="container" style="margin-top:30px;">
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">Visitor</a>
+  <a href="/county">County</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <div>
+  <form class="form-inline" action="" method="GET">
+    <input class="form-control mr-sm-2" type="text" name="q" placeholder="search" value="{{ request.GET.q}}"/>
+    <input class="btn btn-success" type="submit"  value="Search">
+
+</form>
+</div>
+ <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+  
+</div>
+</div>
+
+
+<script>
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
