add changes to navbar

--- a/mgeni/visitor/templates/navbar.html
+++ b/mgeni/visitor/templates/navbar.html
@@ -96,8 +96,9 @@ body {
 <div class="container" style="margin-top:30px;">
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
-  <a href="#news">Visitor</a>
+  <a href="/">Visitor</a>
   <a href="/county">County</a>
+  <a href="#about">Rooms</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   <div>
