--- a/mgeni/visitor/templates/navbar.html
+++ b/mgeni/visitor/templates/navbar.html
@@ -34,7 +34,7 @@
           </div>
         </nav>
          -->
-         <style>
+         <!-- <style>
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -123,4 +123,4 @@ function myFunction() {
         x.className = "topnav";
     }
 }
-</script>
+</script> -->
